--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <html>
 <head>
-    <title>Class Project Proposal</title>
+    <title>Matchmaker</title>
 </head>
 <body>
     <h1>Hello World!</h1>
